--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "lint": "vue-cli-service lint",
     "prettier": "prettier --write .",
     "prepare": "husky install",
-    "commit": "cz"
+    "ct": "cz"
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "core-js": "^3.6.5",
     "element-plus": "^1.3.0-beta.9",
     "vue": "^3.0.0",
